# app-controller

./: Cargo.toml  Containerfile  README.md  deploy.yml
.github/workflows/: ci.yml
containers/docker-test/: Containerfile
containers/firefox-demo/: Containerfile
containers/gazebo-demo/: Containerfile  gazebo.gpg  gazebo.list
containers/output-test/: Containerfile
containers/x11-host/: Containerfile  README.md  sway_config
src/: api.rs  backend.rs  lib.rs  main.rs  types.rs
src/backend/: docker.rs  error.rs  kubernetes.rs  mock.rs  null.rs
