[package]
name = "app-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
kube = { version = "0.98.0", features = ["ws"] }
poem = "3.1.6"
poem-openapi = { version = "5.1.5", features = ["rapidoc"] }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.28", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
